# perf_backend

./: .gitignore  CMakeLists.txt  README.md  filters_guide.md  log  package.py  run.py
include/: perf_shower.hh  perfetto_wrapper.hh  trace_categories.h
proto/: unified_perf_format.proto
src/: main.cc  perf_shower.cc  perfetto_wrapper.cc  trace_categories.cc  unified_generator.cc  unified_processor.cc
